[package]
name = "black_issue_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = {path="../vulkano/vulkano"}
vulkano-shaders = {path="../vulkano/vulkano-shaders"}
vulkano-win = {path="../vulkano/vulkano-win"}
bytemuck = { version = "1.9.1", features = ["derive"] }
winit = "0.27.5"

